--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.database.driverClassName=org.postgresql.Driver
+springdoc.swagger-ui.path=/swagger-ui.html
 
 
 spring.jpa.hibernate.ddl-auto=update
